# matcher

./: .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  INVESTMENT_PLAN.md  MATCHING_PLAN_V2.md  PR_REVIEW.md  PR_SUMMARY.md  README.md  ROADMAP.md  TECHNICAL_REVIEW_CURRENT_STATE.md  TECH_REVIEW_AND_STRESS_TEST_PLAN.md  pyproject.toml
.cursor/: mcp.json
.cursor/commands/: fix.md  pr-summary.md  publish.md  release.md  review.md  run-tests.md  technical-review.md  test.md
data/: customers.parquet  customers_a.parquet  customers_b.parquet  ground_truth_deduplication.md  ground_truth_entity_resolution.md
data/ExactMatcher/blocking_evaluation/: customers_a.parquet  customers_b.parquet  ground_truth.md
data/ExactMatcher/deduplication/: customers.parquet
data/ExactMatcher/entity_resolution/: customers_a.parquet  customers_b.parquet  ground_truth.md
data/ExactMatcher/evaluation/: customers_b.parquet
data/ExactMatcher/fuzzy_evaluation/: customers_a.parquet  customers_b.parquet  ground_truth.md
data/SimpleEvaluator/evaluation/: customers_a.parquet
docs/: BATCHED_MATCHER_DESIGN.md  BEFORE_YOU_BEGIN.md  FUZZY_MATCHING_AND_COMBOS.md  MATCHING_ALGORITHM_DESIGN.md  PHASE3_FUZZY_IMPLEMENTATION.md  UNION_IMPLEMENTATION.md
docs/archive/: README.md  REFACTORING_PLAN.md  TECHNICAL_REVIEW_PHASE1.md
docs/tutorial/: 00_preamble_and_toc.ipynb  01_preparation.ipynb  02_exact_matching.ipynb  03_measurement_loop.ipynb  04_fuzzy_matching.ipynb  05_blocking.ipynb  05_design_algorithm.ipynb  06_blocking.ipynb  06_design_algorithm.ipynb  07_deduplication.ipynb  DX_REVIEW_DATASETS_AND_VARIETY.md  README.md  TUTORIAL_REVIEW_PEDAGOGY_AND_DEVREL.md
docs/tutorial/tutorial_data/: __init__.py  _generate.py  load.py  prep.py
matcher/: __init__.py  algorithms.py  batched.py  core.py  deduplicator.py  evaluators.py  matcher.py  oom.py  results.py  rules_and_blocking.py
scripts/: generate_test_data.py
tests/: __init__.py  test_batched.py  test_components.py  test_core.py  test_evaluation.py  test_oom.py  test_with_sample_data.py
