[project]
name = "hygge-match"
version = "0.1.0"
description = "A cozy, comfortable Python library for entity resolution and deduplication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matcher"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
