[project]
name = "matcher"
version = "0.1.0"
description = "A cozy, comfortable Python library for entity resolution and deduplication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=0.20.0",
    "psutil>=5.9.0",
    "rapidfuzz>=3.0.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
tutorial = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matcher"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
# Dedicated to running docs/tutorial/ (Jupyter). Keep separate from main env.
tutorial = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
